--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
 </head>
 <body>
     <h1>this is main page</h1>
+    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Deleniti, quas?</p>
 </body>
 </html>
