again changes updated

--- a/index.html
+++ b/index.html
@@ -8,5 +8,8 @@
 <body>
     <h1>this is main page</h1>
     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Deleniti, quas?</p>
+    <div>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam, labore!</p>
+    </div>
 </body>
 </html>
